# OpenRank_Fudan_DataNET

./: README.md
复赛/代码/EasyGraph++/: CMakeLists.txt
复赛/代码/EasyGraph++/.github/workflows/: wheel_publish.yml
复赛/代码/EasyGraph++/cpp_easygraph/: CMakeLists.txt  cpp_easygraph.cpp
复赛/代码/EasyGraph++/cpp_easygraph/functions/centrality/: betweenness.cpp  eigenvector.cpp  katz_centrality.cpp
复赛/代码/EasyGraph++/cpp_easygraph/functions/pagerank/: pagerank.cpp
复赛/代码/EasyGraph++/cpp_easygraph/functions/structural_holes/: evaluation.cpp
复赛/代码/EasyGraph++/easygraph/classes/: graph.py
复赛/代码/EasyGraph++/easygraph/nn/: __init__.py
复赛/代码/EasyGraph++/easygraph/nn/convs/: __init__.py
复赛/代码/EasyGraph++/easygraph/nn/convs/graphs/: __init__.py  gat_conv.py  gcn_conv.py  gcnii_conv.py  gin_conv.py  sage_conv.py
复赛/代码/EasyGraph++/easygraph/nn/tests/: dataset_info.py  draw.py
复赛/代码/EasyGraph++/easygraph/nn/tests/GAT_TESTs/: result.out  test_gatconv.py  test_gatconv_cogdl.py  test_gatconv_dgl.py  test_gatconv_egsampling_dc.py  test_gatconv_pyg.py
复赛/代码/EasyGraph++/easygraph/nn/tests/GCN_TESTs/: result_gcn.out  test.py  test_GP.py  test_NDP.py  test_gcnconv.py  test_gcnconv_cogdl.py  test_gcnconv_copy.py  test_gcnconv_dgl.py  test_gcnconv_dim.py  test_gcnconv_egs_dc_multi.py  test_gcnconv_egsampling.py  test_gcnconv_egsampling_dc.py  test_gcnconv_multi.py  test_gcnconv_pyg.py  test_gcnconv_pyg_multi.py  test_mix_Precision.py  txtReader.py
